--- a/app/frontend/template/header.tmpl
+++ b/app/frontend/template/header.tmpl
@@ -14,12 +14,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
-                </li>
                 {{ if .user_id }}
                 <li class="nav-item">
-                    <a class="nav-link btn btn-danger text-white ms-2" href="/auth/logout">Logout</a>
+                    <form action="/auth/logout" method="post">
+                        <button class="dropdown-item" type="submit">Logout</button>
+                    </form>
+<!--                    <a class="nav-link btn btn-danger text-white ms-2" href="/auth/logout">Logout</a>-->
                 </li>
                 {{ else }}
                 <li class="nav-item">
