--- a/app/frontend/template/sign-in.tmpl
+++ b/app/frontend/template/sign-in.tmpl
@@ -5,7 +5,7 @@
     </head>
     <div class="container row p-5">
         <div class="col-3"></div>
-        <form method="post" class="col-6" action="/auth/login{{ if .next }}?next={{.next}} {{ end}}">
+        <form method="post" class="col-6" action="/auth/login{{ if .Next }}?next={{.Next}} {{ end}}">
             <div class="mb-3">
                 <label for="email" class="form-label">Email {{template "required"}}</label>
                 <input type="email" name="email" class="form-control" id="email" required>
