--- a/app/frontend/template/sign-up.tmpl
+++ b/app/frontend/template/sign-up.tmpl
@@ -12,8 +12,8 @@
                 <input type="password" class="form-control" id="password" name="password">
             </div>
             <div class="mb-3">
-                <label for="password-confirm" class="form-label">Password confirm {{template "required"}}</label>
-                <input type="password" class="form-control" id="password-confirm" name="password-confirm">
+                <label for="password_confirm" class="form-label">Password confirm {{template "required"}}</label>
+                <input type="password" class="form-control" id="password_confirm" name="password_confirm">
             </div>
             <div class="mb-3">
                 Already have account, click here to <a href="/sign-in">Sign in</a>
