fix(frontend): 修复bug

--- a/app/frontend/template/footer.tmpl
+++ b/app/frontend/template/footer.tmpl
@@ -1,13 +1,8 @@
 {{ define "footer" }}
-
-    </div>
     </main>
-    <footer class="py-5 bg-primary text-white">
-        <div class="footer-top">
-            <div class="container footer-social">
-                <p>© 2023 CloudWeGo (<a class="text-white"
-                                        href="https://github.com/cloudwego">Source Code</a>)</p>
-            </div>
+    <footer class="py-5 bg-primary text-white mt-auto">
+        <div class="container">
+            <p class="mb-0">© 2023 CloudWeGo (<a class="text-white" href="https://github.com/cloudwego">Source Code</a>)</p>
         </div>
     </footer>
     <script src="/static/js/bootstrap.bundle.min.js"></script>
