--- a/app/frontend/template/home.tmpl
+++ b/app/frontend/template/home.tmpl
@@ -2,7 +2,7 @@
 {{template "header" .}}
 <div class="container">
     <div class="row justify-content-center">
-        {{range .Items}}
+        {{range .items}}
         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 d-flex">
             <div class="card text-center shadow-sm p-3 border-0 flex-fill">
                 <img src="{{ .Picture }}" class="card-img-top img-fluid mx-auto"
